style.css
/*
Theme Name: Ouachita Hills
Version: 1.0.0
*/

html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{font-size:100%;font:inherit;padding:0;border:0;margin:0;vertical-align:baseline}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}.clear{clear:both}
.sticky{}.bypostauthor{}.wp-caption{}.wp-caption-text{}.gallery-caption{}.alignright{}.alignleft{}.aligncenter{}

* {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

html {
	margin:0 auto;
	background-color:#EFEFEF;
}

html, #wrapper {
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Arial Narrow", Arial, "Lucida Grande", sans-serif; 
	font-weight: 300;
	font-size:16px;
	height:100%;
}

p {
	line-height:22px;
	margin-bottom:20px;
}

a {
	text-decoration:none;
	color:#0000E6;
}

a:hover {
	text-decoration: underline;
}

.container {
	background-color:#242424;
}

.container img {
	max-width:100%;
	height:auto;
	padding-bottom:20px;
}

#content {
	height:100%;
	overflow:hidden;
	background-color:white;
}

#footer {
	padding:20px;
	overflow:hidden;
}

#copyright {
	float:left;
}

.credits {
	float:right;
}

/* ===== Header ===== */

.main-header {
	color:white;
	width:100%;
	position:relative;
}	

.main-header a {
	color:white;
}

.branding {
	padding-top: 1px;
	margin-bottom: 4px;
	height: 115px;
}

.replace {
	display:none;
}

.branding img {
	width:100%;
	max-width:331px;
	padding: 20px 10px;
}

.site-title {
	font-size:20px;
}

.site-description {
	display:none;
}

/* ===== Search ===== */

.toggle-search {
	position:absolute;
	right:4px;
	bottom:2px;
}

.search {
	clear:both;
	display:none;
}

.screen-reader-text {
	display:none;
}

/* ===== Navigation Colors ===== */

.primary-nav li.home,
.home .toggle-secondary-nav,
.home .secondary-nav,
.home .secondary-nav li {
	/* Home: */
	background-color:black;
}

.primary-nav li.college,
.college .toggle-secondary-nav,
.college .secondary-nav,
.college .secondary-nav li {
	/* College: */
	background-color:#005C30;
}

.primary-nav li.academy,
.academy .toggle-secondary-nav,
.academy .secondary-nav,
.academy .secondary-nav li {
	/* Academy: */
	background-color:#387798;
}

/* ===== Primary Navigation ===== */

.primary-nav {
	padding:0 10px;
}

.primary-nav ul {
	display:none;
}

.primary-nav li {
	display:inline-block;
	padding:5px 7px;
	border-radius: 4px 4px 0 0;
}

/* ===== Mobile Secondary Navigation ===== */

.toggle-secondary-nav {
	display:block;
	padding:10px;
}

.secondary-nav li {
	padding-left:40px;
}

.secondary-nav .toggle {
	padding-left:0;
}

.secondary-nav a {
	display:block;
	padding:10px;
}

.toggle-secondary-nav:hover,
.secondary-nav li a:hover,
.secondary-nav li.current_page_item>a {
	background-color:#F5F5F5;
	color:black;
	text-decoration:none;
}

.toggle-secondary-nav {
	position:relative;
}

.toggle-secondary-nav:after {
    content:"";
    width:0;
    height:0;
    border-left:4px solid transparent;
    border-right:4px solid transparent;
    border-top:7px solid white;
    position:absolute;
    top:15px;
    left:110px;
}

.toggle-secondary-nav:hover:after {
    border-top:7px solid black;
}

.toggle-secondary-nav.up:after {
	border-top:none;
	border-bottom:7px solid white;
}

.toggle-secondary-nav.up:hover:after {
	border-bottom:7px solid black;
}

/* ===== Horizontal Secondary Navigation ===== */

.horizontal .secondary-nav {
	min-height:36px;
	padding:0;
}

.horizontal .secondary-nav li {
	position:relative;
	padding:0;
}

.horizontal .secondary-nav li a {
	padding:10px;
	display: block;
}

.horizontal .secondary-nav a {
	color:rgba(255, 255, 255, 0.95);;
}

/* Top Level */

.horizontal .secondary-nav>li {
	display:inline-block;
	border-right:1px solid rgba(255, 255, 255, 0.3);
	margin-left:-4px;
}

.horizontal .secondary-nav>li:first-child {
	margin-left:0;
}

.horizontal .secondary-nav>li:first-child,
.horizontal .secondary-nav>li:first-child>a {
	border-radius:3px 0 0 0;
}

.horizontal .secondary-nav>li.current_page_item>a,
.horizontal .secondary-nav>li.current_page_ancestor>a {
	background-color:#F5F5F5;
	color:black;
	text-decoration:none;
}

.horizontal .secondary-nav>li.page_item_has_children>a {
	padding-right:28px;
}

.horizontal .secondary-nav>li.page_item_has_children>a:after {
    content:"";
    width:0;
    height:0;
    border-left:4px solid transparent;
    border-right:4px solid transparent;
    border-top:7px solid white;
    position:absolute;
    top:15px;
    right:10px;
}

.horizontal .secondary-nav>li.page_item_has_children.current_page_item>a:after,
.horizontal .secondary-nav>li.page_item_has_children.current_page_ancestor>a:after,
.horizontal .secondary-nav>li.page_item_has_children>a:hover:after {
    border-top:7px solid black;
}

/* Sub Menus */

.horizontal .secondary-nav .children {
	position: absolute;
	z-index:100;
	display:none;
	width:175px;
	margin-left:1px;
}

.horizontal .secondary-nav>li>.children {
	left:-1px;
}

.horizontal .secondary-nav .children .children {
	right:-176px;
	top:-1px;
}

.horizontal .secondary-nav li:hover>.children {
	display:block;
}

.horizontal .secondary-nav .children li {
	margin-top:1px;
}
/* ... */

